Added source chapters 1-5

--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -92,6 +92,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">Plate</p>
+<p class="itemText">The Glory Of Kings</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">In praising God the Father, the Sustainer of the Universe, and His Son Jesus Christ, through Whom everything came into being, and without Whom nothing came into being, and the Holy Triune Spirit, the Paraclete, Who goeth forth from the Father, and deriveth from the Son, we believe in and adore the Trinity, one God, the Father, and the Son, and the Holy Spirit.</p>
 </li>
 <li>
 <p class="topLevelItemTitle">Prefaces</p>
@@ -112,18 +114,29 @@
 
 <li>
 <p class="topLevelItemTitle">1</p>
+<p class="itemText">Concerning the Glory of Kings</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">The interpretation and explanation of the Three Hundred and Eighteen Orthodox [Fathers] concerning splendour, and greatness, and dignity, and how God gave them to the children of Adam, and especially concerning the greatness and splendour of Zion, the Tabernacle (tâbot) of the Law of God, of which He Himself is the Maker and Fashioner, in the fortress of His holiness before all created things, [both] angels and men. For the Father, and the Son, and the Holy Spirit w...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">2</p>
+<p class="itemText">Concerning the Greatness of Kings</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Come then, let us go back, and let us consider, and let us begin [to state] which of the kings of the earth, from the first even unto the last, in respect of the Law and the Ordinances and honour and greatness, we should magnify or decry.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Gregory, the worker of wonders and miracles, who was cast into a cave because of [his] love for the martyrdom of Christ and suffered tribulation for fifteen years, said, “When I was in the pit I pondered over this matter, and ...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">3</p>
+<p class="itemText">Concerning the Kingdom of Adam</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And I go up from Adam and I say, God is King in truth, for Him praise is meet, and He appointed under Him Adam to be king over all that He had created. And He drove him out of the Garden, because of his apostasy through the sin of the Serpent and the plotting of the Devil. And at that sorrowful moment Cain was born, and when Adam saw that the face of Cain was ill-tempered (or, sullen) and his appearance evil he was sad. And then Abel was born, and when Adam saw tha...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">4</p>
+<p class="itemText">Concerning Envy</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And when they had grown up together, Satan had envy of him, and he cast this envy into the heart of Cain, who was envious [of Abel] first, because of the words of his father Adam, who said, “He who hath the good-tempered face shall be the heir of my kingdom”; and secondly, because of his sister with the beautiful face, who was born with him and who had been given unto Abel, even as God commanded them to multiply and fill the earth—now the face of the sister who had been born with...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">5</p>
+<p class="itemText">Concerning the Kingdom of Seth</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And Adam died, and Seth reigned in righteousness. And Seth died, and Hênôs (Enos) reigned. And Hênôs (Enos) died, and Kâynân (Cainan) reigned. And Kâynân (Cainan) died, and Malâl’êl (Mahalaleel) reigned. And Malâl’êl (Mahalaleel) died, and Yârôd (Jared) reigned. And Yârôd died, and Hênôkh (Enoch) reigned in righteousness, and he feared God, and [God] hid him so that he might not see death. And he became a king in his flesh in the Land of the Living. And after Enoc...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">6</p>
