Add source chapter 6

--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -140,6 +140,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">6</p>
+<p class="itemText">Concerning the Sin of Cain</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And that accursed man Cain, the murderer of his brother, multiplied evil, and his seed did likewise, and they provoked God to wrath with their wickedness. They had not the fear of God before their eyes, and they never kept in mind that He had created them, and they never prayed to Him, and they never worshipped Him, and they never called upon Him, and they never rendered service to Him in fear; nay, they ate, and they drank, and they danced, and they played upon strin...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">7</p>
