Add source chapter 7

--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -145,6 +145,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">7</p>
+<p class="itemText">Concerning Noah</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Now Noah was a righteous man. He feared God, and kept the righteousness and the Law which his fathers had declared unto him—now Noah was the tenth generation from Adam—and he kept in remembrance and did what was good, and he preserved his body from fornication, and he admonished his children, bidding them not to mingle with the children of Cain, the arrogant tyrant, the divider of the kingdom, [who] walked in the counsel of the Devil, who maketh evil to flourish. And he taught t...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">8</p>
