Added source chapters up to 10; footnote style cleanup

--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -150,12 +150,18 @@
 </li>
 <li>
 <p class="topLevelItemTitle">8</p>
+<p class="itemText">Concerning the Flood</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And this thing was evil before God, and He destroyed them with the water of the Flood, which was colder than ice. He opened the doors of heaven, and the cataracts of the Flood poured down; and He opened the fountains that were under the earth, and the fountains of the Flood appeared on the earth. And the sinners were blotted out, for they reaped the fruit of their punishment. And with them perished all beasts and creeping things, for they were all created for the gratificat...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">9</p>
+<p class="itemText">Concerning the Covenant of Noah</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And then Noah the righteous man died, and Shem reigned in wisdom and righteousness, for he was blessed by Noah, saying, “Be God to thy brother.” And to Ham he said, “Be servant to thy brother.” And he said unto Japhet, “Be thou servant to Shem my heir, and be thou subject unto him.” And again, after the Flood, the Devil, our Enemy, did not cease from his hostility against the children of Noah, but stirred up Canaan, the son of Ham, and he became the violent tyran...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">10</p>
+<p class="itemText">CONCERNING ZION</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">“And I swear by Myself and by Zion, the Tabernacle of My covenant, which I have created for a mercy seat and for the salvation of men, and in the latter days I will make it to come down to thy seed, that I will have pleasure in the offerings of thy children upon earth, and the Tabernacle of My covenant shall be with them for ever. And when a cloud hath appeared [in the sky], so that they may not fear and may not imagine that a Flood [is coming] I will make to come down from My h...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">11</p>
