Added source chapters 11-15

--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -165,18 +165,28 @@
 </li>
 <li>
 <p class="topLevelItemTitle">11</p>
+<p class="itemText">The Unanimous Declaration of the Three Hundred and Eighteen Orthodox Fathers</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And they answered and said unto him, “Yea, verily the Tabernacle of the Covenant was the first thing to be created by Him, and there is no lie in thy word; it is true, and correct, and righteous, and unalterable. He created Zion before everything else to be the habitation of His glory, and the plan of His Covenant was that which He said, ‘I will put on the flesh of Adam, which is of the dust, and I will appear unto all...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">12</p>
+<p class="itemText">Concerning Canaan</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Now, it was Canaan who rent the kingdom from the children of Shem, and he transgressed the oath which his father Noah had made them to swear. And the sons of Canaan were seven mighty men, and he took seven mighty cities from the land of Shem, and set his sons over them ; and likewise he also made his own portion double. And in later days God took vengeance upon the sons of Canaan, and made the sons of Shem to inherit their country. These are the nations whom they inherited : t...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">13</p>
+<p class="itemText">Concerning Abraham</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And Târâ (Terah) begot a son and called him “Abraham” (or, Abram). And when Abraham was twelve years old his father Terah sent him to sell idols. And Abraham said, “These are not gods that can make deliverance”; and he took away the idols to sell even as his father had commanded him. And he said unto those unto whom he would sell them, “Do ye wish to buy gods that cannot make deliverance, [things] made of wood, and stone, and iron, and brass, which the hand of an artificer ha...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">14</p>
+<p class="itemText">Concerning the Covenant of Abraham</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And God held converse with Abrâm, and He said unto him, “Fear thou not. From this day thou art My servant, and I will establish My Covenant with thee and with thy seed after thee, and I will multiply thy seed, and I will magnify thy name exceedingly. And I will bring down the Tabernacle of My Covenant upon the earth seven generations after thee, and it shall go round about with thy seed, and shall be salvation unto thy race ; and afterwards I will send My Word...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">15</p>
+<p class="itemText">Concerning Isaac and Jacob</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And Isaac his son became king, and he did not transgress the commandment of God; and he was pure in his soul and in his body, and he died in honour. And his son Jacob reigned, and he also did not transgress the commandment of God, and his possessions became numerous, and his children were many; and God blessed him and he died in honour.</p>
 </li>
 <li>
 <p class="topLevelItemTitle">16</p>
