--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -190,6 +190,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">16</p>
+<p class="itemText">Concerning Rôbêl (Reuben)</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And after him, Jacob’s firstborn son transgressed the commandment of God, and the kingdom departed from him and from his seed, because he had defiled his father’s wife; now it is not right to transgress the law which God hath commanded. And his father cursed him, and God was wroth with him, and he became the least among his brethren, and his children became leprous and scabby; and although he was the firstborn son [of Jacob] the kingdom was rent from him. And his young...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">17</p>
