--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -195,6 +195,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">17</p>
+<p class="itemText">Concerning the Glory of Zion</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And as concerning Zion, the Tabernacle of the Law of God: at the very beginning, as soon as God had stablished the heavens, He ordained that it should become the habitation of His glory upon the earth. And willing this He brought it down to the earth, and permitted Moses to make a likeness of it. And He said unto him, “Make an ark (or, tabernacle) of wood that cannot be eaten by worms, and overlay it with pure gold. And thou shalt place therein the Word of the Law, ...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">18</p>
