Source chapters up till 20

--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -200,12 +200,18 @@
 </li>
 <li>
 <p class="topLevelItemTitle">18</p>
+<p class="itemText">How the Orthodox Fathers and Bishops agreed</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And again the Council of the Three Hundred and Eighteen answered and said, “Amen. This is the salvation of the children of Adam. For since the Tabernacle of the Law of God hath come down, they shall be called, ‘Men of the house of God,’ even as David saith, ‘And His habitation is in Zion.’ And again he saith by the mouth of the Holy Ghost, ‘And My habitation is here, for I have chosen it. And I will bless her priests, and I will make her poor to be gl...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">19</p>
+<p class="itemText">How this Book came to be Found</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And Dĕmâtĕyôs (Domitius), the Archbishop of Rôm (i.e. Constantinople, Byzantium), said, “I have found in the Church of [Saint] Sophia among the books and the royal treasures a manuscript [which stated] that the whole kingdom of the world [belonged] to the Emperor of Rom and the Emperor of Ethiopia.”</p>
 </li>
 <li>
 <p class="topLevelItemTitle">20</p>
+<p class="itemText">Concerning the Division of the Earth</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">From the middle of Jerusalem, and from the north thereof to the south-east is the portion of the Emperor of Rôm; and from the middle of Jerusalem from the north thereof to the south and to Western India is the portion of the Emperor of Ethiopia. For both of them are of the seed of Shem, the son of Noah, the seed of Abraham, the seed of David, the children of Solomon. For God gave the seed of Shem glory because of the blessing of their father Noah. The Empero...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">21</p>
