--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -215,18 +215,29 @@
 </li>
 <li>
 <p class="topLevelItemTitle">21</p>
+<p class="itemText">Concerning the Queen of the South</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And how this Queen was born I have discovered written in that manuscript, and in this manner also doth the Evangelist mention that woman. And our Lord Jesus Christ, in condemning the Jewish people, the crucifiers, who lived at that time, spake, saying: “The Queen of the South shall rise up on the Day of Judgment and shall dispute with, and condemn, and overcome this generation who would not hearken unto the preaching of My word, for she came from the ends of th...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">22</p>
+<p class="itemText">Concerning Tâmrîn, the Merchant</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And there was a certain wise man, the leader of a merchant’s caravan, whose name was Tâmrîn, and he used to load five hundred and twenty camels, and he possessed about three and seventy ships.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Now at that time King Solomon wished to build the House of God, and he sent out messages among all the merchants in the east and in the west, and in the north and in the south, bidding the merchants come and take gold and silver from him, so that he might take from them wh...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">23</p>
+<p class="itemText">How the Merchant Returned to Ethiopia</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And it came to pass that the merchant Tâmrîn wished to return to his own country, and he went to Solomon and bowed low before him, and embraced him, and said unto him, " Peace be to thy majesty! Send me away and let me depart to my country to my Lady, for I have tarried long in beholding thy glory, and thy wisdom, and the abundance of dainty meats wherewith thou hast regaled me. And now I would depart to my Lady. Would that I could abide with thee, even as ...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">24</p>
+<p class="itemText">How the Queen made ready to set out on her Journey</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And the Queen said unto them, “Hearken, O ye who are my people, and give ye ear to my words. For I desire wisdom and my heart seeketh to find understanding. I am smitten with the love of wisdom, and I am constrained by the cords of understanding; for wisdom is far better than treasure of gold and silver, and wisdom is the best of everything that hath been created on the earth. Now unto what under the heavens shall wisdom be compared ? It is swe...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">25</p>
+<p class="itemText">How the Queen Came to Solomon the King</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And she arrived in Jerusalem, and brought to the King very many precious gifts which he desired to possess greatly. And he paid her great honour and rejoiced, and he gave her a habitation in the royal palace near him. And he sent her food both for the morning and evening meal, each time fifteen measures by the kôrî of finely ground white meal, cooked with oil and gravy and sauce in abundance, and thirty measures by the kôrî of crushed white meal wherefrom ...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">26</p>
