--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -232,7 +232,7 @@
 <li>
 <p class="topLevelItemTitle">24</p>
 <p class="itemText">How the Queen made ready to set out on her Journey</span></p></p>
-<p class="itemText"><p class="p1"><span class="s1">And the Queen said unto them, “Hearken, O ye who are my people, and give ye ear to my words. For I desire wisdom and my heart seeketh to find understanding. I am smitten with the love of wisdom, and I am constrained by the cords of understanding; for wisdom is far better than treasure of gold and silver, and wisdom is the best of everything that hath been created on the earth. Now unto what under the heavens shall wisdom be compared ? It is swe...</p>
+<p class="itemText"><p class="p1"><span class="s1">And the Queen said unto them, “Hearken, O ye who are my people, and give ye ear to my words. For I desire wisdom and my heart seeketh to find understanding. I am smitten with the love of wisdom, and I am constrained by the cords of understanding; for wisdom is far better than treasure of gold and silver, and wisdom is the best of everything that hath been created on the earth. Now unto what under the heavens shall wisdom be compared? It is swee...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">25</p>
@@ -241,18 +241,29 @@
 </li>
 <li>
 <p class="topLevelItemTitle">26</p>
+<p class="itemText">How the King held converse with the Queen</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And the Queen Mâkedâ spake unto King Solomon, saying, “Blessed art thou, my lord, in that such wisdom and understanding have been given unto thee. For myself I only wish that I could be as one of the least of thine handmaidens, so that I could wash thy feet, and hearken to thy wisdom, and apprehend thy understanding, and serve thy majesty, and enjoy thy wisdom. O how greatly have pleased me thy answering, and the sweetness of thy voice, and the beauty o...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">27</p>
+<p class="itemText">Concerning the Labourer</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And as Solomon was talking in this wise with the Queen, he saw a certain labourer carrying a stone upon his head and a skin of water upon his neck and shoulders, and his food and his sandals were [tied] about his loins, and there were pieces of wood in his hands; his garments were ragged and tattered, the sweat fell in drops from his face, and water from the skin of water dripped down upon his feet. And the labourer passed before Solomon, and as he was going by the King ...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">28</p>
+<p class="itemText">How Solomon gave Commandments to the Queen</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And the King answered and said unto her, “Verily, it is right that they (i.e.,men) should worship God, Who created the universe, the heavens and the earth, the sea and the dry land, the sun and the moon, the stars and the brilliant bodies of the heavens, the trees and the stones, the beasts and the feathered fowl, the wild beasts and the crocodiles, the fish and the whales, the hippopotamuses and the water lizards, the lightnings and the crashes of thu...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">29</p>
+<p class="itemText">Concerning the Three Hundred and Eighteen [Patriarchs]</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Now we ordain even as did they. We know well what the Apostles who were before us spake. We the Three Hundred and Eighteen have maintained and laid down the orthodox faith, our Lord Jesus Christ being with us. And He hath directed us what we should teach, and how we should fashion the faith.</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And King Solomon sent a message unto the Queen, saying, “Now that thou hast come here why wilt thou go away without seeing the administration of the ki...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">30</p>
+<p class="itemText">Concerning how King Solomon Swore to the Queen</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And Solomon answered and said unto her, “I swear unto thee that I will not take thee by force, but thou must swear unto me that thou wilt not take by force anything that is in my house.” And the Queen laughed and said unto him, “Being a wise man why dost thou speak as a fool? Shall I steal anything, or shall I carry out of the house of the King that which the King hath not given to me? Do not imagine that I have come hither through love of riches. ...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">31</p>
