--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -267,18 +267,28 @@
 </li>
 <li>
 <p class="topLevelItemTitle">31</p>
+<p class="itemText">Concerning the Sign which Solomon gave the Queen</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And the Queen rejoiced, and she went forth in order to depart, and the King set her on her way with great pomp and ceremony. And Solomon took her aside so that they might be alone together, and he took off the ring that was upon his little finger, and he gave it to the Queen, and said unto her, “Take [this] so that thou mayest not forget me. And if it happen that I obtain seed from thee, this ring shall be unto it a sign; and if it be a man child...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">32</p>
+<p class="itemText">How The Queen Brought Forth And Came To Her Own Country</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And the Queen departed and came into the country of Bâlâ Zadîsârĕyâ nine months and five days after she had separated from King Solomon. And the pains of childbirth laid hold upon her, and she brought forth a man child, and she gave it to the nurse with great pride and delight. And she tarried until the days of her purification were ended, and then she came to her own country with great pomp and ceremony. And her officers who had remained ...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">33</p>
+<p class="itemText">How the King of Ethiopia Travelled</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And the Queen called Tâmrîn, the chief of her caravan men and merchants, and she said unto him, “Get ready for thy journey and take this young man with thee, for he importuneth me by night and by day. And thou shalt take him to the King and shalt bring him back hither in safety, if God, the Lord of Israel, pleaseth.” And she prepared a retinue suitable to their wealth and honourable condition, and made ready all the goods that were necessary for the journey, a...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">34</p>
+<p class="itemText">How The Young Man Arrived In His Mother’s Country</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And when the young man arrived in his mother’s country he rejoiced there in the honour [which he received], and in the gifts [that were made] to him. And when the people saw him they thought him to be the perfect likeness of Solomon the King. And they made obeisance to him, and they said unto him, “Hail, the royal father liveth!” And they brought unto him gifts and offerings, fatted cattle and food, as to their king. And [the people of] the whol...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">35</p>
+<p class="itemText">How King Solomon sent to his Son the Commander of his Army</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And Solomon the King sent the commander of his army, on whose hand he was wont to lean, with gifts and meat and drink to entertain that traveller. And the commander set out with a great number of wagons, and he came to Bayna Lehkem, and embraced him, and gave him everything that Solomon the King had sent unto him. And he said unto him, “Make haste and come with me, for the heart of the King is burnt up as with fire with the love of thee...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">36</p>
