Add source chapter 36

--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -292,6 +292,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">36</p>
+<p class="itemText">How King Solomon held Intercourse with his Son</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And Joas (Benaiah), the son of Yôdâhê, went out and brought Bayna Lehkem inside. And when King Solomon saw him he rose up, and moved forward to welcome him, and he loosed the band of his apparel from his shoulder, and he embraced him, with his hands [resting] on his breast, and he kissed his mouth, and forehead, and eyes, and he said unto him, “Behold, my father David hath renewed his youth and hath risen from the dead.” And Solomon the King turned...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">37</p>
