--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -297,15 +297,24 @@
 </li>
 <li>
 <p class="topLevelItemTitle">37</p>
+<p class="itemText">How Solomon asked his Son Questions</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And again Solomon held converse with his son when he was alone, and he said unto him, “Why dost thou wish to depart from me? What dost thou lack here that thou wouldst go to the country of the heathen? And what is it that driveth thee to forsake the kingdom of Israel?”</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And his son answered and said unto him, “It is impossible for me to live here. Nay, I must go to my mother, thou favouring me with thy blessing. For thou hast a son who is better than I am, na...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">38</p>
+<p class="itemText">How the King Planned to send away his Son with the Children of the Nobles</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And then Solomon the King went back into his house, and he caused to be gathered together his councillors, and his officers, and the elders of his kingdom, and he said unto them, “I am not able to make this young man consent [to dwell here]. And now, hearken ye unto me and to what I shall say unto you. Come, let us make him king of the country of Ethiopia, together with your children; ye sit on my right hand and on my lef...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">39</p>
+<p class="itemText">How They Made The Son Of Solomon King</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And they made ready the ointment of the oil of king- ship, and the sounds of the large horn, and the small horn, and the flute and the pipes, and the harp and the drum filled the air; and the city resounded with cries of joy and gladness. And they brought the young man into the Holy of Holies, and he laid hold upon the horns of the altar, and sovereignty was given unto him by the mouth of Zadok the priest, and by the mouth of Joas (Benaiah) the priest, the ...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">40</p>
+<p class="itemText">How Zadok the Priest gave Commands to David the King</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And Zadok the priest answered and said unto the young man, “Hearken unto what I shall say unto thee. And if thou wilt perform it thou shalt live to God, and if thou dost not God will punish thee, and thou shalt become the least of all the nations, and thou shalt be vanquished by thy foes. And God shall turn away His face from thee, and thou shalt be dismayed, and sad, and sorrowful in thy heart, and thy sleep shall be without refreshing and h...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">41</p>
