--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -318,6 +318,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">41</p>
+<p class="itemText">Concerning the Blessing of Kings</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">“Hearken thou now to the blessing that shall come upon thee, if thou wilt do the Will of God. Thou shalt be blessed in all thy ways, blessed shalt thou be in the city, blessed shalt thou be in the field, blessed shalt thou be in thy house, blessed shalt thou be outside it, and blessed shall be the fruit of thy belly. And those who were gathered together said, Amen. Blessed shall be the fruit of thy land. Amen. Blessed shall be the fountains of thy waters. Amen. ...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">42</p>
