--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -323,6 +323,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">42</p>
+<p class="itemText">Concerning the Ten Commandments</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">“And hear ye, Israel, that which God commandeth you to keep; He saith, ‘I am the Lord thy God Who hath brought thee out of the land of Egypt and out of the house of bondage. There shall be no other gods besides Me, and thou shalt not make any god that is graven, and no god that is like what is in the heavens above, or in the earth beneath, or in the water which is under the earth. Thou shalt not bow down to them, and thou shalt not serve them, for I the Lord thy ...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">43</p>
