Add source chapter 43

--- a/ModernKebraNegast.scriv/QuickLook/Preview.html
+++ b/ModernKebraNegast.scriv/QuickLook/Preview.html
@@ -328,6 +328,8 @@
 </li>
 <li>
 <p class="topLevelItemTitle">43</p>
+<p class="itemText">How the Men of the Army of Israel received [their] Orders</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">And the city rejoiced because the King had made his son King, and had appointed him King from his own territory to that of another. But the city sorrowed also because the King had commanded that they should give their children who were called “firstborn.” And those who were on the right hand should sit in the same way as their fathers sat with King Solomon, even so should they sit at the right hand of his son David, the King of Ethiopia;...</p>
 </li>
 <li>
 <p class="topLevelItemTitle">44</p>
